--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "elibyy/tcpdf-laravel": "^5.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "symfony/translation": "4.3.8",
         "twbs/bootstrap": "4.1.3"
     },
     "require-dev": {
