--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "symfony/translation": "4.3.8",
+        "tecnickcom/tcpdf": "^6.2.9",
         "twbs/bootstrap": "4.1.3"
     },
     "require-dev": {
